# OtoparkYonetimSistemi

./: .gitignore  Arac.cpp  Arac.h  AracTurleri.cpp  AracTurleri.h  CMakeLists.txt  LICENSE  OperasyonSefi.cpp  Otopark.cpp  Otopark.h  OtoparkSistemi  OtoparkVeri.csv  ParkKaydi.cpp  ParkKaydi.h  ParkYeri.cpp  ParkYeri.h  README.md  main.cpp
